// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iptc: iptc-tags 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AboutCvTerm": Array [
      Object {
        "CvId": "http://example.com/cv/about/ref2017.1",
        "CvTermId": "http://example.com/cv/about/ref2017.1/code987",
        "CvTermName": "CV-Term Name 1 (ref2017.1)",
        "CvTermRefinedAbout": "http://example.com/cv/refinements2/ref2017.1/codeX145",
      },
    ],
    "AdditionalModelInformation": "Additional Model Info (ref2017.1)",
    "ApplicationRecordVersion": 4,
    "Artist": "Creator1 (ref2017.1)",
    "ArtworkOrObject": Array [
      Object {
        "AOCircaDateCreated": "AO Circa Date: between 1550 and 1600 (ref2017.1)",
        "AOContentDescription": "AO Content Description 1 (ref2017.1)",
        "AOContributionDescription": "AO Contribution Description 1 (ref2017.1)",
        "AOCopyrightNotice": "AO Copyright Notice 1 (ref2017.1)",
        "AOCreator": Array [
          "AO Creator Name 1a (ref2017.1)",
          "AO Creator Name 1b (ref2017.1)",
        ],
        "AOCreatorId": Array [
          "AO Creator Id 1a (ref2017.1)",
          "AO Creator Id 1b (ref2017.1)",
        ],
        "AOCurrentCopyrightOwnerId": "AO Current Copyright Owner ID 1 (ref2017.1)",
        "AOCurrentCopyrightOwnerName": "AO Current Copyright Owner Name 1 (ref2017.1)",
        "AOCurrentLicensorId": "AO Current Licensor ID 1 (ref2017.1)",
        "AOCurrentLicensorName": "AO Current Licensor Name 1 (ref2017.1)",
        "AODateCreated": "1916:10:26 12:13:14+00:00",
        "AOPhysicalDescription": "AO Physical Description 1 (ref2017.1)",
        "AOSource": "AO Source 1 (ref2017.1)",
        "AOSourceInvNo": "AO Source Inventory No 1 (ref2017.1)",
        "AOSourceInvURL": "AO Source Inventory URL (ref2017.1)",
        "AOStylePeriod": Array [
          "AO Style Baroque (ref2017.1)",
          "AO Style Italian Baroque (ref2017.1)",
        ],
        "AOTitle": "AO Title 1 (ref2017.1)",
      },
    ],
    "AuthorsPosition": "Creator's Job Title  (ref2017.1)",
    "BitsPerSample": 8,
    "By-line": "Creator1 (ref2017.1)",
    "By-lineTitle": "Creator's Job Title  (ref2017.1)",
    "Caption-Abstract": "The description aka caption (ref2017.1)",
    "CaptionWriter": "Description Writer (ref2017.1)",
    "City": "City (Core) (ref2017.1)",
    "ColorComponents": 3,
    "ColorTransform": "YCbCr",
    "Copyright": "Copyright (Notice) 2017.1 IPTC - www.iptc.org  (ref2017.1)",
    "CopyrightNotice": "Copyright (Notice) 2017.1 IPTC - www.iptc.org  (ref2017.1)",
    "CopyrightOwner": Array [
      Object {
        "CopyrightOwnerID": "Copyright Owner Id 1 (ref2017.1)",
        "CopyrightOwnerName": "Copyright Owner Name 1 (ref2017.1)",
      },
      Object {
        "CopyrightOwnerID": "Copyright Owner Id 2 (ref2017.1)",
        "CopyrightOwnerName": "Copyright Owner Name 2 (ref2017.1)",
      },
    ],
    "Country": "Country (Core) (ref2017.1)",
    "Country-PrimaryLocationCode": "R17",
    "Country-PrimaryLocationName": "Country (Core) (ref2017.1)",
    "CountryCode": "R17",
    "Creator": Array [
      "Creator1 (ref2017.1)",
      "Creator2 (ref2017.1)",
    ],
    "CreatorContactInfo": Object {
      "CiAdrCity": "Creator's CI: City (ref2017.1)",
      "CiAdrCtry": "Creator's CI: Country (ref2017.1)",
      "CiAdrExtadr": "Creator's CI: Address, line 1 (ref2017.1)",
      "CiAdrPcode": "Creator's CI: Postcode (ref2017.1)",
      "CiAdrRegion": "Creator's CI: State/Province (ref2017.1)",
      "CiEmailWork": "Creator's CI: Email@1, Email@2 (ref2017.1)",
      "CiTelWork": "Creator's CI: Phone # 1, Phone # 2 (ref2017.1)",
      "CiUrlWork": "http://www.Creators.CI/WebAddress/ref2017.1",
    },
    "Credit": "Credit Line (ref2017.1)",
    "CurrentIPTCDigest": "cff19e30a872971b0c882244e12dd50e",
    "DCTEncodeVersion": 100,
    "DateCreated": "2017-07-13T17:01:00.000Z",
    "DateTimeCreated": "2017-07-13T17:01:00.000Z",
    "DateTimeOriginal": "2017-07-13T17:01:00.000Z",
    "Description": "The description aka caption (ref2017.1)",
    "DigitalImageGUID": "http://example.com/imageGUIDs/TestGUID12345/ref2017.1",
    "DigitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/softwareImage",
    "EmbdEncRightsExpr": Array [
      Object {
        "EncRightsExpr": "The Encoded Rights Expression (ref2017.1)",
        "RightsExprEncType": "IANA Media Type of ERE (ref2017.1)",
        "RightsExprLangId": "http://example.org/RELids/id4711/ref2017.1",
      },
    ],
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "Event": "An Event (ref2017.1)",
    "ExifByteOrder": "Big-endian (Motorola, MM)",
    "FileName": "iptc.jpg",
    "FileSize": "89 KiB",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Genre": Array [
      Object {
        "CvId": "http://example.com/cv/genre/ref2017.1",
        "CvTermId": "http://example.com/cv/genre/ref2017.1/code1369",
        "CvTermName": "Genre CV-Term Name 1 (ref2017.1)",
        "CvTermRefinedAbout": "http://example.com/cv/genrerefinements2/ref2017.1/codeY864",
      },
    ],
    "Headline": "The Headline (ref2017.1)",
    "ImageCreator": Array [
      Object {
        "ImageCreatorID": "Image Creator Id 1 (ref2017.1)",
        "ImageCreatorName": "Image Creator Name 1 (ref2017.1)",
      },
      Object {
        "ImageCreatorID": "Image Creator Id 2 (ref2017.1)",
        "ImageCreatorName": "Image Creator Name 2 (ref2017.1)",
      },
    ],
    "ImageDescription": "The description aka caption (ref2017.1)",
    "ImageHeight": 500,
    "ImageSize": "1000x500",
    "ImageSupplier": Array [
      Object {
        "ImageSupplierID": "Image Supplier Id (ref2017.1)",
        "ImageSupplierName": "Image Supplier Name (ref2017.1)",
      },
    ],
    "ImageSupplierImageID": "Image Supplier Image ID (ref2017.1)",
    "ImageWidth": 1000,
    "Instructions": "An Instruction (ref2017.1)",
    "IntellectualGenre": "A Genre (ref2017.1)",
    "Keywords": Array [
      "Keyword1ref2017.1",
      "Keyword2ref2017.1",
      "Keyword3ref2017.1",
    ],
    "Licensor": Array [
      Object {
        "LicensorCity": "Licensor City 1 (ref2017.1)",
        "LicensorCountry": "Licensor Country 1 (ref2017.1)",
        "LicensorEmail": "Licensor Email 1 (ref2017.1)",
        "LicensorExtendedAddress": "Licensor Ext Addr 1 (ref2017.1)",
        "LicensorID": "Licensor ID 1 (ref2017.1)",
        "LicensorName": "Licensor Name 1 (ref2017.1)",
        "LicensorPostalCode": "Licensor Postcode 1 (ref2017.1)",
        "LicensorRegion": "Licensor Region 1 (ref2017.1)",
        "LicensorStreetAddress": "Licensor Street Addr 1 (ref2017.1)",
        "LicensorTelephone1": "Licensor Phone1 1 (ref2017.1)",
        "LicensorTelephone2": "Licensor Phone2 1 (ref2017.1)",
        "LicensorURL": "Licensor URL 1 (ref2017.1)",
      },
      Object {
        "LicensorCity": "Licensor City 2 (ref2017.1)",
        "LicensorCountry": "Licensor Country 2 (ref2017.1)",
        "LicensorEmail": "Licensor Email 2 (ref2017.1)",
        "LicensorExtendedAddress": "Licensor Ext Addr 2 (ref2017.1)",
        "LicensorID": "Licensor ID 2 (ref2017.1)",
        "LicensorName": "Licensor Name 2 (ref2017.1)",
        "LicensorPostalCode": "Licensor Postcode 2 (ref2017.1)",
        "LicensorRegion": "Licensor Region 2 (ref2017.1)",
        "LicensorStreetAddress": "Licensor Street Addr 2 (ref2017.1)",
        "LicensorTelephone1": "Licensor Phone1 2 (ref2017.1)",
        "LicensorTelephone2": "Licensor Phone2 2 (ref2017.1)",
        "LicensorURL": "Licensor URL 2 (ref2017.1)",
      },
    ],
    "LinkedEncRightsExpr": Array [
      Object {
        "LinkedRightsExpr": "http://example.org/linkedrightsexpression/id986/ref2017.1",
        "RightsExprEncType": "IANA Media Type of ERE (ref2017.1)",
        "RightsExprLangId": "http://example.org/RELids/id4712/ref2017.1",
      },
    ],
    "Location": "Sublocation (Core) (ref2017.1)",
    "LocationCreated": Array [
      Object {
        "City": "City (Location created1) (ref2017.1)",
        "CountryCode": "R17",
        "CountryName": "CountryName (Location created1) (ref2017.1)",
        "LocationId": Array [
          "Location Id (Location created1) (ref2017.1)",
        ],
        "ProvinceState": "Province/State (Location created1) (ref2017.1)",
        "Sublocation": "Sublocation (Location created1) (ref2017.1)",
        "WorldRegion": "Worldregion (Location created1) (ref2017.1)",
      },
    ],
    "LocationShown": Array [
      Object {
        "City": "City (Location shown1) (ref2017.1)",
        "CountryCode": "R17",
        "CountryName": "CountryName (Location shown1) (ref2017.1)",
        "LocationId": Array [
          "Location Id 1a(Location shown1) (ref2017.1)",
          "Location Id 1b(Location shown1) (ref2017.1)",
        ],
        "ProvinceState": "Province/State (Location shown1) (ref2017.1)",
        "Sublocation": "Sublocation (Location shown1) (ref2017.1)",
        "WorldRegion": "Worldregion (Location shown1) (ref2017.1)",
      },
      Object {
        "City": "City (Location shown2) (ref2017.1)",
        "CountryCode": "R17",
        "CountryName": "CountryName (Location shown2) (ref2017.1)",
        "LocationId": Array [
          "Location Id 2a(Location shown2) (ref2017.1)",
          "Location Id 2b(Location shown2) (ref2017.1)",
        ],
        "ProvinceState": "Province/State (Location shown2) (ref2017.1)",
        "Sublocation": "Sublocation (Location shown2) (ref2017.1)",
        "WorldRegion": "Worldregion (Location shown2) (ref2017.1)",
      },
    ],
    "MIMEType": "image/jpeg",
    "MaxAvailHeight": 14,
    "MaxAvailWidth": 20,
    "Megapixels": 0.5,
    "MinorModelAgeDisclosure": "Age 25 or Over",
    "ModelAge": Array [
      25,
      27,
      30,
    ],
    "ModelReleaseID": Array [
      "Model Release ID 1 (ref2017.1)",
      "Model Release ID 2 (ref2017.1)",
    ],
    "ModelReleaseStatus": "Not Applicable",
    "ObjectAttributeReference": "A Genre (ref2017.1)",
    "ObjectName": "The Title (ref2017.1)",
    "OrganisationInImageCode": Array [
      "Organisation Code 1 (ref2017.1)",
      "Organisation Code 2 (ref2017.1)",
      "Organisation Code 3 (ref2017.1)",
    ],
    "OrganisationInImageName": Array [
      "Organisation Name 1 (ref2017.1)",
      "Organisation Name 2 (ref2017.1)",
      "Organisation Name 3 (ref2017.1)",
    ],
    "OriginalTransmissionReference": "Job Id (ref2017.1)",
    "PersonInImage": Array [
      "Person Shown 1 (ref2017.1)",
      "Person Shown 2 (ref2017.1)",
    ],
    "PersonInImageWDetails": Array [
      Object {
        "PersonCharacteristic": Array [
          Object {
            "CvId": "http://example.com/cv/test99/ref2017.1",
            "CvTermId": "http://example.com/cv/test99/code987/ref2017.1",
            "CvTermName": "Person Characteristic Name 1 (ref2017.1)",
            "CvTermRefinedAbout": "http://example.com/cv/refinements987/codeY765/ref2017.1",
          },
        ],
        "PersonDescription": "Person Description 1 (ref2017.1)",
        "PersonId": Array [
          "http://wikidata.org/item/Q123456789/ref2017.1",
          "http://freebase.com/m/987654321/ref2017.1",
        ],
        "PersonName": "Person Name 1 (ref2017.1)",
      },
    ],
    "ProductInImage": Array [
      Object {
        "ProductDescription": "Product Description 1 (ref2017.1)",
        "ProductGTIN": 123456782017.1,
        "ProductName": "Product Name 1 (ref2017.1)",
      },
    ],
    "PropertyReleaseID": Array [
      "Property Release ID 1 (ref2017.1)",
      "Property Release ID 2 (ref2017.1)",
    ],
    "PropertyReleaseStatus": "Not Applicable",
    "Province-State": "Province/State (Core) (ref2017.1",
    "Rating": 1,
    "RegistryID": Array [
      Object {
        "RegEntryRole": "Registry Entry Role ID 1 (ref2017.1)",
        "RegItemId": "Registry Image ID 1 (ref2017.1)",
        "RegOrgId": "Registry Organisation ID 1 (ref2017.1)",
      },
      Object {
        "RegEntryRole": "Registry Entry Role ID 2 (ref2017.1)",
        "RegItemId": "Registry Image ID 2 (ref2017.1)",
        "RegOrgId": "Registry Organisation ID 2 (ref2017.1)",
      },
    ],
    "ResolutionUnit": "inches",
    "Rights": "Copyright (Notice) 2017.1 IPTC - www.iptc.org  (ref2017.1)",
    "Scene": Array [
      "IPTC-Scene-Code1 (ref2017.1)",
      "IPTC-Scene-Code2 (ref2017.1)",
    ],
    "Source": "Source (ref2017.1)",
    "SpecialInstructions": "An Instruction (ref2017.1)",
    "State": "Province/State (Core) (ref2017.1)",
    "Sub-location": "Sublocation (Core) (ref2017.1)",
    "Subject": Array [
      "Keyword1ref2017.1",
      "Keyword2ref2017.1",
      "Keyword3ref2017.1",
    ],
    "SubjectCode": Array [
      "1ref2017.1",
      "2ref2017.1",
      "3ref2017.1",
    ],
    "SubjectReference": Array [
      "IPTC:1ref2017.1",
      "IPTC:2ref2017.1",
      "IPTC:3ref2017.1",
    ],
    "Title": "The Title (ref2017.1)",
    "TransmissionReference": "Job Id (ref2017.1)",
    "UsageTerms": "Rights Usage Termns (ref2017.1)",
    "WebStatement": "http://www.WebStatementOfRights.org/2017.1",
    "Writer-Editor": "Description Writer (ref2017.1)",
    "XMPToolkit": "Image::ExifTool 11.01",
    "XResolution": 72,
    "YCbCrPositioning": "Centered",
    "YCbCrSubSampling": "YCbCr4:2:0 (2 2)",
    "YResolution": 72,
    "errors": Array [],
  },
  "fileName": "IPTC.JPG",
  "fileSize": 91435,
  "frameRate": null,
  "height": 500,
  "mimetype": "image/jpeg",
  "uploaded": toEqualDate<2019-12-03T12:30:23.000Z>,
  "width": 1000,
}
`;

exports[`lamppost: lamppost-tags 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "[14], Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AlreadyApplied": true,
    "Aperture": 11,
    "ApertureValue": 11,
    "ApplicationRecordVersion": 4,
    "ApproximateFocusDistance": 10.6,
    "Artist": "Dave Townsend",
    "AutoLateralCA": 1,
    "BitsPerSample": 8,
    "Blacks2012": 0,
    "BlueHue": 0,
    "BlueMatrixColumn": "0.14307 0.06061 0.7141",
    "BlueSaturation": 0,
    "BlueTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "By-line": "Dave Townsend",
    "CFAPattern": "[Red,Green][Green,Blue]",
    "CMMFlags": "Not Embedded, Independent",
    "CameraProfile": "Camera Standard",
    "CameraProfileDigest": "1D0E94C4CD633470D5CCB636631C48B3",
    "CircleOfConfusion": "0.020 mm",
    "City": "Hood River",
    "Clarity2012": "+58",
    "CodedCharacterSet": "UTF8",
    "ColorComponents": 3,
    "ColorNoiseReduction": 25,
    "ColorNoiseReductionDetail": 50,
    "ColorNoiseReductionSmoothness": 50,
    "ColorSpace": "sRGB",
    "ColorSpaceData": "RGB ",
    "ColorTemperature": 5050,
    "ColorTransform": "YCbCr",
    "Compression": "JPEG (old-style)",
    "ConnectionSpaceIlluminant": "0.9642 1 0.82491",
    "Contrast": "Normal",
    "Contrast2012": "+43",
    "ConvertToGrayscale": false,
    "Country": "USA",
    "Country-PrimaryLocationName": "USA",
    "CreateDate": "2018-08-22T18:51:25.000-07:00",
    "Creator": Array [
      "Dave Townsend",
    ],
    "CreatorTool": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "CurrentIPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "CustomRendered": "Normal",
    "DCTEncodeVersion": 100,
    "DOF": "5.84 m (8.43 - 14.27 m)",
    "DateCreated": "2018-08-22T18:51:25.800-07:00",
    "DateTimeCreated": "2018-08-22T18:51:25.000-07:00",
    "DateTimeOriginal": "2018-08-22T18:51:25.000-07:00",
    "DefringeGreenAmount": 0,
    "DefringeGreenHueHi": 60,
    "DefringeGreenHueLo": 40,
    "DefringePurpleAmount": 0,
    "DefringePurpleHueHi": 70,
    "DefringePurpleHueLo": 30,
    "Dehaze": "+16",
    "DerivedFrom": Object {
      "DocumentID": "xmp.did:4356928d-7f34-4374-9cbe-b079555e903f",
      "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
      "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    },
    "DeviceAttributes": "Reflective, Glossy, Positive, Color",
    "DeviceManufacturer": "Hewlett-Packard",
    "DeviceMfgDesc": "IEC http://www.iec.ch",
    "DeviceModel": "sRGB",
    "DeviceModelDesc": "IEC 61966-2.1 Default RGB colour space - sRGB",
    "DigitalCreationDate": "2018-08-22",
    "DigitalCreationDateTime": "2018-08-22T18:51:25.000-07:00",
    "DigitalCreationTime": "18:51:25",
    "DigitalZoomRatio": 1,
    "DisplayedUnitsX": "inches",
    "DisplayedUnitsY": "inches",
    "DistortionCorrectionAlreadyApplied": true,
    "DocumentID": "xmp.did:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "ExifByteOrder": "Little-endian (Intel, II)",
    "ExifVersion": "0230",
    "Exposure2012": "+0.75",
    "ExposureCompensation": 0,
    "ExposureMode": "Auto",
    "ExposureProgram": "Program AE",
    "ExposureTime": "1/2000",
    "FNumber": 11,
    "FOV": "14.4 deg",
    "FileName": "lamppost.jpg",
    "FileSize": "54 KiB",
    "FileSource": "Digital Camera",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Flash": "Off, Did not fire",
    "FocalLength": "95.0 mm",
    "FocalLength35efl": "95.0 mm (35 mm equivalent: 142.0 mm)",
    "FocalLengthIn35mmFormat": "142 mm",
    "Format": "image/jpeg",
    "GPSAltitude": 28.4597,
    "GPSLatitude": 45.7150516666667,
    "GPSLatitudeRef": "N",
    "GPSLongitude": -121.517781666667,
    "GPSLongitudeRef": "W",
    "GPSPosition": "45.7150516666667 -121.517781666667",
    "GPSVersionID": "2 2 0 0",
    "GainControl": "Low gain up",
    "GrainAmount": 0,
    "GreenHue": 0,
    "GreenMatrixColumn": "0.38515 0.71687 0.09708",
    "GreenSaturation": 0,
    "GreenTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "HasCrop": false,
    "HasSettings": true,
    "HierarchicalSubject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "Highlights2012": -61,
    "History": Array [
      Object {
        "Action": "derived",
        "Parameters": "converted from image/x-nikon-nef to image/dng, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:4356928d-7f34-4374-9cbe-b079555e903f",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.4 (Macintosh)",
        "When": "2018:08:22 21:32-07:00",
      },
      Object {
        "Action": "derived",
        "Parameters": "converted from image/dng to image/jpeg, saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
        "When": "2018:09:11 21:51:01-07:00",
      },
    ],
    "HueAdjustmentAqua": 0,
    "HueAdjustmentBlue": 0,
    "HueAdjustmentGreen": 0,
    "HueAdjustmentMagenta": 0,
    "HueAdjustmentOrange": 0,
    "HueAdjustmentPurple": 0,
    "HueAdjustmentRed": 0,
    "HueAdjustmentYellow": 0,
    "HyperfocalDistance": "40.82 m",
    "IPTCDigest": "a3a7eb4c9b66b63e4a4c82107348bbe8",
    "ISO": 400,
    "ImageHeight": 331,
    "ImageNumber": 72430,
    "ImageSize": "500x331",
    "ImageWidth": 500,
    "InstanceID": "xmp.iid:0b7f6fec-d4a7-45fe-98f7-c08e8aa15024",
    "Keywords": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "LateralChromaticAberrationCorrectionAlreadyApplied": true,
    "Lens": "18.0-200.0 mm f/3.5-5.6",
    "LensID": "18.0-200.0 mm f/3.5-5.6",
    "LensInfo": "18-200mm f/3.5-5.6",
    "LensManualDistortionAmount": 0,
    "LensModel": "18.0-200.0 mm f/3.5-5.6",
    "LensProfileChromaticAberrationScale": 100,
    "LensProfileDigest": "0393084BF82E26E09731385C1949BE99",
    "LensProfileDistortionScale": 100,
    "LensProfileEnable": 1,
    "LensProfileFilename": "NIKON D90 (Nikon AF-S DX NIKKOR 18-200mm f3.5-5.6G ED VR II) - RAW.lcp",
    "LensProfileName": "Adobe (Nikon AF-S DX NIKKOR 18-200mm f/3.5-5.6G ED VR II)",
    "LensProfileSetup": "LensDefaults",
    "LensProfileVignettingScale": 100,
    "LightSource": "Unknown",
    "LightValue": 15.9,
    "Location": "Hood River Waterfront Park",
    "Look": Object {
      "Name": "",
    },
    "Luminance": "76.03647 80 87.12462",
    "LuminanceAdjustmentAqua": 0,
    "LuminanceAdjustmentBlue": 0,
    "LuminanceAdjustmentGreen": 0,
    "LuminanceAdjustmentMagenta": 0,
    "LuminanceAdjustmentOrange": 0,
    "LuminanceAdjustmentPurple": 0,
    "LuminanceAdjustmentRed": 0,
    "LuminanceAdjustmentYellow": 0,
    "LuminanceSmoothing": 0,
    "MIMEType": "image/jpeg",
    "Make": "NIKON CORPORATION",
    "MaxApertureValue": 5.3,
    "MeasurementBacking": "0 0 0",
    "MeasurementFlare": "0.999%",
    "MeasurementGeometry": "Unknown",
    "MeasurementIlluminant": "D65",
    "MeasurementObserver": "CIE 1931",
    "MediaBlackPoint": "0 0 0",
    "MediaWhitePoint": "0.95045 1 1.08905",
    "Megapixels": 0.166,
    "MetadataDate": "2018-09-11T21:51:01.000-07:00",
    "MeteringMode": "Multi-segment",
    "Model": "NIKON D7000",
    "ModifyDate": "2018-09-11T21:51:01.000-07:00",
    "OriginalDocumentID": "FB88A364E1BA3E773BA4E161395A7E30",
    "OverrideLookVignette": false,
    "ParametricDarks": 0,
    "ParametricHighlightSplit": 75,
    "ParametricHighlights": 0,
    "ParametricLights": 0,
    "ParametricMidtoneSplit": 50,
    "ParametricShadowSplit": 25,
    "ParametricShadows": 0,
    "PerspectiveAspect": 0,
    "PerspectiveHorizontal": 0,
    "PerspectiveRotate": 0,
    "PerspectiveScale": 100,
    "PerspectiveUpright": 0,
    "PerspectiveVertical": 0,
    "PerspectiveX": 0,
    "PerspectiveY": 0,
    "PhotoshopThumbnail": "(Binary data 5886 bytes, use -b option to extract)",
    "PostCropVignetteAmount": 0,
    "PrimaryPlatform": "Microsoft Corporation",
    "ProcessVersion": 10,
    "ProfileCMMType": "Linotronic",
    "ProfileClass": "Display Device Profile",
    "ProfileConnectionSpace": "XYZ ",
    "ProfileCopyright": "Copyright (c) 1998 Hewlett-Packard Company",
    "ProfileCreator": "Hewlett-Packard",
    "ProfileDateTime": "1998-02-09T06:49:00.000-08:00",
    "ProfileDescription": "sRGB IEC61966-2.1",
    "ProfileFileSignature": "acsp",
    "ProfileID": 0,
    "ProfileVersion": "2.1.0",
    "Province-State": "Oregon",
    "Rating": 4,
    "RawFileName": "180822-185125.nef",
    "RedHue": 0,
    "RedMatrixColumn": "0.43607 0.22249 0.01392",
    "RedSaturation": 0,
    "RedTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "RenderingIntent": "Perceptual",
    "ResolutionUnit": "inches",
    "RetouchAreas": Array [
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009825,
            "SizeY": 0.009825,
            "What": "Mask/Ellipse",
            "X": 0.264686,
            "Y": 0.426716,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.415687,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.28924,
        "SpotType": "heal",
      },
      Object {
        "Feather": 0,
        "HealVersion": "+2",
        "Masks": Array [
          Object {
            "Alpha": 0,
            "CenterValue": 1,
            "MaskValue": 1,
            "PerimeterValue": 0,
            "SizeX": 0.009901,
            "SizeY": 0.009901,
            "What": "Mask/Ellipse",
            "X": 0.443005,
            "Y": 0.014113,
          },
        ],
        "Method": "gaussian",
        "OffsetY": 0.056086,
        "Opacity": 1,
        "Seed": "+2",
        "SourceState": "sourceAutoComputed",
        "SourceX": 0.368736,
        "SpotType": "heal",
      },
    ],
    "RetouchInfo": Array [
      "centerX = 0.264686, centerY = 0.426716, radius = 0.009825, sourceState = sourceAutoComputed, sourceX = 0.289240, sourceY = 0.415687, spotType = heal",
      "centerX = 0.443005, centerY = 0.014113, radius = 0.009901, sourceState = sourceAutoComputed, sourceX = 0.368736, sourceY = 0.056086, spotType = heal",
    ],
    "Saturation": "Normal",
    "SaturationAdjustmentAqua": 0,
    "SaturationAdjustmentBlue": 0,
    "SaturationAdjustmentGreen": 0,
    "SaturationAdjustmentMagenta": 0,
    "SaturationAdjustmentOrange": 0,
    "SaturationAdjustmentPurple": 0,
    "SaturationAdjustmentRed": 0,
    "SaturationAdjustmentYellow": 0,
    "ScaleFactor35efl": 1.5,
    "SceneCaptureType": "Standard",
    "SceneType": "Directly photographed",
    "SensingMethod": "One-chip color area",
    "SensitivityType": "Recommended Exposure Index",
    "SerialNumber": 3140722,
    "ShadowTint": 0,
    "Shadows2012": "+47",
    "SharpenDetail": 25,
    "SharpenEdgeMasking": 0,
    "SharpenRadius": "+1.0",
    "Sharpness": "Normal",
    "ShutterSpeed": "1/2000",
    "ShutterSpeedValue": "1/2000",
    "Software": "Adobe Photoshop Lightroom Classic 7.5 (Macintosh)",
    "SplitToningBalance": 0,
    "SplitToningHighlightHue": 0,
    "SplitToningHighlightSaturation": 0,
    "SplitToningShadowHue": 0,
    "SplitToningShadowSaturation": 0,
    "State": "Oregon",
    "Sub-location": "Hood River Waterfront Park",
    "SubSecCreateDate": "2018-08-22T18:51:25.800-07:00",
    "SubSecDateTimeOriginal": "2018-08-22T18:51:25.800-07:00",
    "SubSecTimeDigitized": 80,
    "SubSecTimeOriginal": 80,
    "Subject": Array [
      "lamppost",
      "sky",
      "sun",
    ],
    "SubjectDistanceRange": "Unknown",
    "Technology": "Cathode Ray Tube Display",
    "ThumbnailImage": "(Binary data 5886 bytes, use -b option to extract)",
    "ThumbnailLength": 5886,
    "ThumbnailOffset": 1130,
    "Tint": "+4",
    "ToneCurve": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveBlue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveGreen": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveName": "Linear",
    "ToneCurveName2012": "Linear",
    "ToneCurvePV2012": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Blue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Green": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Red": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurveRed": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneMapStrength": 0,
    "UprightCenterMode": 0,
    "UprightCenterNormX": 0.5,
    "UprightCenterNormY": 0.5,
    "UprightFocalLength35mm": 35,
    "UprightFocalMode": 0,
    "UprightFourSegmentsCount": 0,
    "UprightPreview": false,
    "UprightTransformCount": 6,
    "UprightVersion": 151388160,
    "Version": 10.5,
    "Vibrance": 0,
    "ViewingCondDesc": "Reference Viewing Condition in IEC61966-2.1",
    "ViewingCondIlluminant": "19.6445 20.3718 16.8089",
    "ViewingCondIlluminantType": "D50",
    "ViewingCondSurround": "3.92889 4.07439 3.36179",
    "VignetteAmount": 0,
    "VignetteCorrectionAlreadyApplied": true,
    "WhiteBalance": "Auto",
    "Whites2012": 0,
    "XMPToolkit": "Adobe XMP Core 5.6-c140 79.160451, 2017/05/06-01:08:21        ",
    "XResolution": 240,
    "YCbCrSubSampling": "YCbCr4:4:4 (1 1)",
    "YResolution": 240,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "Testname.jpg",
  "fileSize": 55084,
  "frameRate": null,
  "height": 331,
  "mimetype": "image/jpeg",
  "uploaded": toEqualDate<2020-02-04T12:53:23.000Z>,
  "width": 500,
}
`;

exports[`rotated: rotated-tags 1`] = `
Object {
  "bitRate": null,
  "duration": null,
  "exif": Object {
    "APP14Flags0": "[14], Encoded with Blend=1 downsampling",
    "APP14Flags1": "(none)",
    "AlreadyApplied": true,
    "Aperture": 5,
    "ApertureValue": 5,
    "ApplicationRecordVersion": 4,
    "Artist": "",
    "AutoLateralCA": 0,
    "BitsPerSample": 8,
    "Blacks2012": 0,
    "BlueHue": 0,
    "BlueMatrixColumn": "0.14307 0.06061 0.7141",
    "BlueSaturation": 0,
    "BlueTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "CMMFlags": "Not Embedded, Independent",
    "CameraProfile": "Embedded",
    "CameraProfileDigest": "54650A341B5B5CCAE8442D0B43A92BCE",
    "CircleOfConfusion": "0.019 mm",
    "City": "American Fork",
    "Clarity2012": "+16",
    "CodedCharacterSet": "UTF8",
    "ColorComponents": 3,
    "ColorGradeBlending": 50,
    "ColorGradeGlobalHue": 0,
    "ColorGradeGlobalLum": 0,
    "ColorGradeGlobalSat": 0,
    "ColorGradeHighlightLum": 0,
    "ColorGradeMidtoneHue": 0,
    "ColorGradeMidtoneLum": 0,
    "ColorGradeMidtoneSat": 0,
    "ColorGradeShadowLum": 0,
    "ColorNoiseReduction": 0,
    "ColorSpace": "sRGB",
    "ColorSpaceData": "RGB ",
    "ColorTransform": "YCbCr",
    "ComponentsConfiguration": Array [
      "Unknown (Y Cb Cr -)",
    ],
    "Compression": "JPEG (old-style)",
    "ConnectionSpaceIlluminant": "0.9642 1 0.82491",
    "Contrast2012": -14,
    "ConvertToGrayscale": false,
    "Copyright": "[None] (Photographer) -  (Editor)",
    "Country": "USA",
    "Country-PrimaryLocationName": "USA",
    "CreateDate": "2017-07-04T09:29:49.000-08:00",
    "CreatorTool": "Adobe Photoshop Lightroom Classic 10.0 (Macintosh)",
    "CropAngle": 0,
    "CropBottom": 1,
    "CropConstrainToWarp": 0,
    "CropLeft": 0,
    "CropRight": 1,
    "CropTop": 0,
    "CurrentIPTCDigest": "e83109dc3c2fc1728f92c9984f945f97",
    "CustomRendered": "Normal",
    "DCTEncodeVersion": 100,
    "DateCreated": "2017-07-04T09:29:49.660-08:00",
    "DateTime": "2017-05-30T14:51:10.000-08:00",
    "DateTimeCreated": "2017-07-04T09:29:49.000-08:00",
    "DateTimeOriginal": "2017-07-04T09:29:49.000-08:00",
    "DefringeGreenAmount": 0,
    "DefringeGreenHueHi": 60,
    "DefringeGreenHueLo": 40,
    "DefringePurpleAmount": 0,
    "DefringePurpleHueHi": 70,
    "DefringePurpleHueLo": 30,
    "Dehaze": 0,
    "DerivedFrom": Object {
      "DocumentID": "E389E2E891D6A704D0487F69E5E9A85A",
      "OriginalDocumentID": "E389E2E891D6A704D0487F69E5E9A85A",
    },
    "DeviceAttributes": "Reflective, Glossy, Positive, Color",
    "DeviceManufacturer": "Hewlett-Packard",
    "DeviceMfgDesc": "IEC http://www.iec.ch",
    "DeviceModel": "sRGB",
    "DeviceModelDesc": "IEC 61966-2.1 Default RGB colour space - sRGB",
    "DigitalCreationDate": "2017-07-04",
    "DigitalCreationDateTime": "2017-07-04T09:29:49.000-08:00",
    "DigitalCreationTime": "09:29:49",
    "DisplayedUnitsX": "inches",
    "DisplayedUnitsY": "inches",
    "DocumentID": "xmp.did:77b9ec46-3e31-4e03-99d9-b84c9ff12405",
    "EncodingProcess": "Baseline DCT, Huffman coding",
    "ExifByteOrder": "Little-endian (Intel, II)",
    "ExifVersion": "0231",
    "Exposure2012": "+0.61",
    "ExposureCompensation": 0,
    "ExposureMode": "Auto",
    "ExposureProgram": "Aperture-priority AE",
    "ExposureTime": "1/80",
    "FNumber": 5,
    "FOV": "30.5 deg",
    "FileName": "rotated.jpg",
    "FileSize": "81 KiB",
    "FileType": "JPEG",
    "FileTypeExtension": "jpg",
    "Flash": "Off, Did not fire",
    "FocalLength": "42.0 mm",
    "FocalLength35efl": "42.0 mm (35 mm equivalent: 66.1 mm)",
    "FocalPlaneResolutionUnit": "inches",
    "FocalPlaneXResolution": 5728.176796,
    "FocalPlaneYResolution": 5808.403361,
    "Format": "image/jpeg",
    "GPSAltitude": 1451.8272,
    "GPSLatitude": 40.3928666666667,
    "GPSLatitudeRef": "N",
    "GPSLongitude": -111.772536111667,
    "GPSLongitudeRef": "W",
    "GPSPosition": "40.3928666666667 -111.772536111667",
    "GPSVersionID": "2 2 0 0",
    "GrainAmount": 0,
    "GrayMixerAqua": -17,
    "GrayMixerBlue": "+11",
    "GrayMixerGreen": -26,
    "GrayMixerMagenta": "+3",
    "GrayMixerOrange": -19,
    "GrayMixerPurple": "+16",
    "GrayMixerRed": -10,
    "GrayMixerYellow": -22,
    "GreenHue": 0,
    "GreenMatrixColumn": "0.38515 0.71687 0.09708",
    "GreenSaturation": 0,
    "GreenTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "HasCrop": false,
    "HasSettings": true,
    "HierarchicalSubject": Array [
      "person|Dave Townsend",
      "person|Tiffney Townsend",
    ],
    "Highlights2012": -26,
    "History": Array [
      Object {
        "Action": "derived",
        "Parameters": "saved to new location",
      },
      Object {
        "Action": "saved",
        "Changed": "/",
        "InstanceID": "xmp.iid:77b9ec46-3e31-4e03-99d9-b84c9ff12405",
        "SoftwareAgent": "Adobe Photoshop Lightroom Classic 10.0 (Macintosh)",
        "When": "2020:11:22 16:21:26-08:00",
      },
    ],
    "HueAdjustmentAqua": 0,
    "HueAdjustmentBlue": 0,
    "HueAdjustmentGreen": 0,
    "HueAdjustmentMagenta": 0,
    "HueAdjustmentOrange": 0,
    "HueAdjustmentPurple": 0,
    "HueAdjustmentRed": 0,
    "HueAdjustmentYellow": 0,
    "HyperfocalDistance": "18.47 m",
    "IPTCDigest": "e83109dc3c2fc1728f92c9984f945f97",
    "ISO": 100,
    "ImageHeight": 300,
    "ImageSize": "200x300",
    "ImageWidth": 200,
    "IncrementalTemperature": 0,
    "IncrementalTint": 0,
    "InstanceID": "xmp.iid:77b9ec46-3e31-4e03-99d9-b84c9ff12405",
    "Keywords": Array [
      "Dave Townsend",
      "Tiffney Townsend",
      "person",
    ],
    "LensManualDistortionAmount": 0,
    "LensProfileEnable": 0,
    "LightValue": 11,
    "Luminance": "76.03647 80 87.12462",
    "LuminanceAdjustmentAqua": 0,
    "LuminanceAdjustmentBlue": 0,
    "LuminanceAdjustmentGreen": 0,
    "LuminanceAdjustmentMagenta": 0,
    "LuminanceAdjustmentOrange": 0,
    "LuminanceAdjustmentPurple": 0,
    "LuminanceAdjustmentRed": 0,
    "LuminanceAdjustmentYellow": 0,
    "LuminanceSmoothing": 0,
    "MIMEType": "image/jpeg",
    "Make": "Canon",
    "MeasurementBacking": "0 0 0",
    "MeasurementFlare": "0.999%",
    "MeasurementGeometry": "Unknown",
    "MeasurementIlluminant": "D65",
    "MeasurementObserver": "CIE 1931",
    "MediaBlackPoint": "0 0 0",
    "MediaWhitePoint": "0.95045 1 1.08905",
    "Megapixels": 0.06,
    "MetadataDate": "2020-11-22T16:21:26.000-08:00",
    "MeteringMode": "Multi-segment",
    "Model": "Canon EOS REBEL T3i",
    "ModifyDate": "2020-11-22T16:21:26.000-08:00",
    "OffsetTime": "-08:00",
    "Orientation": "Top-left",
    "OriginalDocumentID": "E389E2E891D6A704D0487F69E5E9A85A",
    "OverrideLookVignette": false,
    "Padding": "2060 bytes undefined data",
    "ParametricDarks": 0,
    "ParametricHighlightSplit": 75,
    "ParametricHighlights": 0,
    "ParametricLights": 0,
    "ParametricMidtoneSplit": 50,
    "ParametricShadowSplit": 25,
    "ParametricShadows": 0,
    "PersonInImage": Array [
      "Dave Townsend",
      "Tiffney Townsend",
    ],
    "PerspectiveAspect": 0,
    "PerspectiveHorizontal": 0,
    "PerspectiveRotate": 0,
    "PerspectiveScale": 100,
    "PerspectiveUpright": 0,
    "PerspectiveVertical": 0,
    "PerspectiveX": 0,
    "PerspectiveY": 0,
    "PhotoshopThumbnail": "(Binary data 16457 bytes, use -b option to extract)",
    "PostCropVignetteAmount": 0,
    "PrimaryPlatform": "Microsoft Corporation",
    "ProcessVersion": 6.7,
    "ProfileCMMType": "Linotronic",
    "ProfileClass": "Display Device Profile",
    "ProfileConnectionSpace": "XYZ ",
    "ProfileCopyright": "Copyright (c) 1998 Hewlett-Packard Company",
    "ProfileCreator": "Hewlett-Packard",
    "ProfileDateTime": "1998-02-09T06:49:00.000-08:00",
    "ProfileDescription": "sRGB IEC61966-2.1",
    "ProfileFileSignature": "acsp",
    "ProfileID": 0,
    "ProfileVersion": "2.1.0",
    "Province-State": "Utah",
    "Rating": 4,
    "RawFileName": "",
    "RedHue": 0,
    "RedMatrixColumn": "0.43607 0.22249 0.01392",
    "RedSaturation": 0,
    "RedTRC": "(Binary data 2060 bytes, use -b option to extract)",
    "RegionInfo": Object {
      "AppliedToDimensions": Object {
        "H": 300,
        "Unit": "pixel",
        "W": 200,
      },
      "RegionList": Array [
        Object {
          "Area": Object {
            "H": 0.26575,
            "W": 0.39843,
            "X": 0.25178,
            "Y": 0.22763,
          },
          "Name": "Dave Townsend",
          "Rotation": 0.09374,
          "Type": "Face",
        },
        Object {
          "Area": Object {
            "H": 0.24625,
            "W": 0.22151,
            "X": 0.45586,
            "Y": 0.43469,
          },
          "Name": "Tiffney Townsend",
          "Rotation": 0,
          "Type": "Face",
        },
      ],
    },
    "RenderingIntent": "Perceptual",
    "ResolutionUnit": "inches",
    "Saturation": 0,
    "SaturationAdjustmentAqua": 0,
    "SaturationAdjustmentBlue": 0,
    "SaturationAdjustmentGreen": 0,
    "SaturationAdjustmentMagenta": 0,
    "SaturationAdjustmentOrange": 0,
    "SaturationAdjustmentPurple": 0,
    "SaturationAdjustmentRed": 0,
    "SaturationAdjustmentYellow": 0,
    "ScaleFactor35efl": 1.6,
    "SceneCaptureType": "Standard",
    "ShadowTint": 0,
    "Shadows2012": "+46",
    "Sharpness": 0,
    "ShutterSpeed": "1/80",
    "ShutterSpeedValue": "1/80",
    "Software": "Adobe Photoshop Lightroom Classic 10.0 (Macintosh)",
    "SplitToningBalance": 0,
    "SplitToningHighlightHue": 0,
    "SplitToningHighlightSaturation": 0,
    "SplitToningShadowHue": 0,
    "SplitToningShadowSaturation": 0,
    "State": "Utah",
    "SubSecCreateDate": "2017-07-04T09:29:49.660-08:00",
    "SubSecDateTimeOriginal": "2017-07-04T09:29:49.660-08:00",
    "SubSecModifyDate": "2020-11-22T16:21:26.000-08:00",
    "SubSecTimeDigitized": 66,
    "SubSecTimeOriginal": 66,
    "Subject": Array [
      "Dave Townsend",
      "Tiffney Townsend",
      "person",
    ],
    "Technology": "Cathode Ray Tube Display",
    "Texture": 0,
    "ThumbnailImage": "(Binary data 16457 bytes, use -b option to extract)",
    "ThumbnailLength": 16457,
    "ThumbnailOffset": 882,
    "ToneCurveName2012": "Linear",
    "ToneCurvePV2012": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Blue": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Green": Array [
      "0, 0",
      "255, 255",
    ],
    "ToneCurvePV2012Red": Array [
      "0, 0",
      "255, 255",
    ],
    "Version": 13,
    "Vibrance": -8,
    "ViewingCondDesc": "Reference Viewing Condition in IEC61966-2.1",
    "ViewingCondIlluminant": "19.6445 20.3718 16.8089",
    "ViewingCondIlluminantType": "D50",
    "ViewingCondSurround": "3.92889 4.07439 3.36179",
    "VignetteAmount": 0,
    "WhiteBalance": "Auto",
    "Whites2012": 0,
    "XMPToolkit": "Adobe XMP Core 5.6-c140 79.160451, 2017/05/06-01:08:21        ",
    "XResolution": 240,
    "YCbCrPositioning": "Co-sited",
    "YCbCrSubSampling": "YCbCr4:4:4 (1 1)",
    "YResolution": 240,
    "errors": Array [],
    "tz": "UTC-08",
    "tzSource": "offsetMinutesToZoneName from OffsetTime",
  },
  "fileName": "rotated.jpg",
  "fileSize": 83275,
  "frameRate": null,
  "height": 300,
  "mimetype": "image/jpeg",
  "uploaded": toEqualDate<2010-06-03T12:30:23.000Z>,
  "width": 200,
}
`;

exports[`video: video-tags 1`] = `
Object {
  "bitRate": 18664868,
  "duration": 1.74,
  "exif": Object {
    "AndroidManufacturer": "motorola",
    "AndroidModel": "moto g(7)",
    "AndroidVersion": 9,
    "AndroidVideoTemporalLayersCount": "(Binary data 4 bytes, use -b option to extract)",
    "AudioBitsPerSample": 16,
    "AudioChannels": 2,
    "AudioFormat": "mp4a",
    "AudioSampleRate": 48000,
    "AvgBitrate": "16.8 Mbps",
    "Balance": 0,
    "BitDepth": 24,
    "ColorRepresentation": "nclx 1 1 1",
    "CompatibleBrands": Array [
      "isom",
      "mp42",
    ],
    "CompressorID": "avc1",
    "CreateDate": "2019-11-03T23:07:19.000-08:00",
    "CurrentTime": "0 s",
    "Duration": 1.74,
    "FileName": "video.mp4",
    "FileSize": "3.9 MiB",
    "FileType": "MP4",
    "FileTypeExtension": "mp4",
    "GPSCoordinates": "45.5484 -122.6187",
    "GPSLatitude": 45.5484,
    "GPSLongitude": -122.6187,
    "GPSPosition": "45.5484 -122.6187",
    "GraphicsMode": "srcCopy",
    "HandlerDescription": "SoundHandle",
    "HandlerType": "Audio Track",
    "ImageHeight": 1080,
    "ImageSize": "1920x1080",
    "ImageWidth": 1920,
    "MIMEType": "video/mp4",
    "MajorBrand": "MP4 v2 [ISO 14496-14]",
    "MatrixStructure": "1 0 0 0 1 0 0 0 1",
    "MediaCreateDate": "2019-11-03T23:07:19.000-08:00",
    "MediaDataOffset": 405381,
    "MediaDataSize": 3654228,
    "MediaDuration": 1.68627083333333,
    "MediaHeaderVersion": 0,
    "MediaModifyDate": "2019-11-03T23:07:19.000-08:00",
    "MediaTimeScale": 48000,
    "Megapixels": 2.1,
    "MinorVersion": "0.0.0",
    "ModifyDate": "2019-11-03T23:07:19.000-08:00",
    "MovieHeaderVersion": 0,
    "NextTrackID": 3,
    "OpColor": "0 0 0",
    "PixelAspectRatio": "65536:65536",
    "PosterTime": "0 s",
    "PreferredRate": 1,
    "PreferredVolume": "100.00%",
    "PreviewDuration": 0,
    "PreviewTime": "0 s",
    "Rotation": 90,
    "SelectionDuration": 0,
    "SelectionTime": "0 s",
    "SourceImageHeight": 1080,
    "SourceImageWidth": 1920,
    "TimeScale": 1000,
    "TrackCreateDate": "2019-11-03T23:07:19.000-08:00",
    "TrackDuration": 1.74,
    "TrackHeaderVersion": 0,
    "TrackID": 1,
    "TrackLayer": 0,
    "TrackModifyDate": "2019-11-03T23:07:19.000-08:00",
    "TrackVolume": "0.00%",
    "VideoFrameRate": 59.202,
    "XResolution": 72,
    "YResolution": 72,
    "errors": Array [],
    "tz": "America/Los_Angeles",
    "tzSource": "from Lat/Lon",
  },
  "fileName": "test_video.foo",
  "fileSize": 4059609,
  "frameRate": 59.202207150247155,
  "height": 1080,
  "mimetype": "video/mp4;codecs=\\"avc1.64002a,mp4a.40.2\\"",
  "uploaded": toEqualDate<2010-01-03T09:30:23.000Z>,
  "width": 1920,
}
`;
